# zylo-lang

./: .gitattributes  CMakeLists.txt  LICENSE-MIT  README.md  SECURITY.md
scripts/: build.bat  run.bat
src/: main.cxx  terminal.cxx  terminal.hxx
src/internal/: lexer.cxx  lexer.hxx
src/utilities/: color.hxx  constants.hxx  error.hxx  memory.hxx
